--- a/src/main/resources/templates/profilPage.html
+++ b/src/main/resources/templates/profilPage.html
@@ -69,7 +69,7 @@
     <!-- Homepage -->
 
     <div class="container">
-      <div class="box profile">
+      <div class="box profile" id="profileInfoBox">
         <div class="profile-info-wrapper">
           <div class="pic">
             <img
@@ -144,7 +144,87 @@
           </div>
         </div>
         <div class="icon-edit-content">
-          <img src="../assets/icons/pen.png" alt="pen" />
+          <img
+            src="../assets/icons/pen.png"
+            alt="pen"
+            onclick="displayprofileEdit()"
+          />
+        </div>
+      </div>
+
+      <div class="box profile" id="profileEdit">
+        <div class="profile-info-wrapper">
+          <div class="info">
+            <h2 class="profile_name">Crab Daddy</h2>
+            <h2 class="profile_city">aus Erdurt</h2>
+            <button type="button" class="collapsible">mehr Infos</button>
+            <div class="content">
+              <div class="ProfileInfosHeader">
+                <div class="group1">
+                  <div class="birthday group profileinfo">
+                    <img
+                      class="profileInfoIcons"
+                      src="../assets/icons/cake.svg"
+                      alt="cake"
+                    />
+                    <p>01.01.1990</p>
+                  </div>
+                  <div class="gender group profileinfo">
+                    <img
+                      class="profileInfoIcons"
+                      src="../assets/icons/genders-gender-svgrepo-com.svg"
+                      alt="icon"
+                    />
+                    <p>Mann</p>
+                  </div>
+                </div>
+                <div class="group2">
+                  <div class="relationship group profileinfo">
+                    <img
+                      class="profileInfoIcons"
+                      src="../assets/icons/heart-thin.svg"
+                      alt="heart"
+                    />
+                    <p>Single</p>
+                  </div>
+                  <div class="job group profileinfo">
+                    <img
+                      class="profileInfoIcons"
+                      src="../assets/icons/job-seeker.svg"
+                      alt="job"
+                    />
+                    <p>Fischer</p>
+                  </div>
+                </div>
+                <div class="visitor profileinfo">
+                  <img
+                    class="profileInfoIcons"
+                    src="../assets/icons/guest-traveler.svg"
+                    alt="icon"
+                  />
+                  <p>523</p>
+                </div>
+              </div>
+              <div class="profileInfosFooter">
+                <div class="lastVisitor">
+                  <p>letzter Besucher: Crab Kid</p>
+                </div>
+                <div class="newFriend">
+                  <p>neuester Freund: Crab Kong</p>
+                </div>
+                <div class="oldFriend">
+                  <p>ältester Freund: Crab Mommy</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="icon-edit-content">
+          <img
+            src="../assets/icons/pen.png"
+            alt="pen"
+            onclick="displayprofileInfo()"
+          />
         </div>
       </div>
 
