--- a/src/main/resources/templates/profilPage.html
+++ b/src/main/resources/templates/profilPage.html
@@ -228,6 +228,32 @@
         </div>
       </div>
 
+      <div class="box profile-edit">
+        <div class="editFields">
+          <input type="text" id="firstName" name="firstName" value="Vorname">
+          <input type="text" id="lastName" name="lastName" value="Nachname">
+              <div class="genderButtons">
+                  <button type="button">Geschlecht</button>
+                    <input type="radio" id="male" name="gender" value="male">
+                      <label for="male">männlich</label><br>
+                   <input type="radio" id="female" name="gender" value="female">
+                      <label for="female">weiblich</label><br>
+                   <input type="radio" id="diverse" name="gender" value="diverse">
+                      <label for="diverse">divers</label><br>
+              </div>
+          <input type="text" id="region" name="region" value="Wohnort">
+          <input type="text" id="occupation" name="occupation" value="Beruf">
+          <input type="date" id="birthday" name="birthday" value="birthday">
+      </div>
+      <div class="profilepictureButton">
+        <button type="button">Profilbild ändern</button>
+        <button type="button">Profilbild löschen</button>
+      </div>
+        <div class="submit">
+          <button class="submitBtn"><img src="../assets/icons/accept.png" alt="logo"></button>
+        </div>
+      </div>
+
       <div class="box status">
         <p class="status">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
