--- a/src/main/resources/templates/profilPage.html
+++ b/src/main/resources/templates/profilPage.html
@@ -162,6 +162,7 @@
               value="Vorname"
             />
             <input type="text" id="lastName" name="lastName" value="Nachname" />
+            <input type="date" id="birthday" name="birthday" value="birthday" />
             <div class="genderButtons">
               <label for="gender">Choose a gender:</label>
               <select name="gender" id="gender">
@@ -173,21 +174,22 @@
             <input type="text" id="region" name="region" value="Wohnort" />
             <input
               type="text"
+              id="relationship"
+              name="relationship"
+              value="Glücklich getrennt"
+            />
+            <input
+              type="text"
               id="occupation"
               name="occupation"
               value="Beruf"
             />
-            <input type="date" id="birthday" name="birthday" value="birthday" />
           </form>
         </div>
         <div class="buttons">
-          <div class="delete">
-            <button class="profileDeleteBtn" type="button">
-              Profilbild ändern
-            </button>
-            <button class="profileDeleteBtn" type="button">
-              Profilbild löschen
-            </button>
+          <div class="buttonsBtn">
+            <button class="profileBtn" type="button">Profilbild ändern</button>
+            <button class="profileBtn" type="button">Profilbild löschen</button>
           </div>
           <div class="submit">
             <button class="submitBtn">
