--- a/src/main/resources/templates/profilepage.html
+++ b/src/main/resources/templates/profilepage.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="fragments/head">
-  <link rel="stylesheet" href="../assets/css/profilePage.css" />
+  <link rel="stylesheet" href="../assets/css/profilepage.css" />
   <link rel="stylesheet" href="../assets/css/navigation.css" />
   <title>Profile page</title>
 </head>
