--- a/src/main/resources/templates/profilepage.html
+++ b/src/main/resources/templates/profilepage.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments/head">
-  <link rel="stylesheet" href="../assets/css/profilepage.css" />
-  <link rel="stylesheet" href="../assets/css/navigation.css" />
-  <title>Profile page</title>
+<head th:replace="fragments/head"></head>
+
+<head>
+  <link th:href = "@{/css/profilepage.css}" rel="stylesheet">
+  <script th:src = "@{/js/profilepage.js}"> type="text/javascript" </script>
+  <title>Login.de.Profile Page</title>
 </head>
 
 <body>
-<header th:replace="fragments/header"></header>
+
+<!-- navbar -->
+<header th:replace="fragments/nav"></header>
+
 <!-- Homepage -->
 
 <div class="container">
@@ -17,7 +22,7 @@
       <div class="pic">
         <img
                 class="profile_pic"
-                src="../assets/images/profilePic.png"
+                src="images/profilePic.png"
                 alt="profile_pic"
         />
       </div>
@@ -31,7 +36,7 @@
               <div class="birthday group profileinfo">
                 <img
                         class="profileInfoIcons"
-                        src="../assets/icons/cake.svg"
+                        src="icons/cake.svg"
                         alt="cake"
                 />
                 <p>01.01.1990</p>
@@ -39,7 +44,7 @@
               <div class="gender group profileinfo">
                 <img
                         class="profileInfoIcons"
-                        src="../assets/icons/genders-gender-svgrepo-com.svg"
+                        src="icons/genders-gender-svgrepo-com.svg"
                         alt="icon"
                 />
                 <p>Mann</p>
@@ -49,7 +54,7 @@
               <div class="relationship group profileinfo">
                 <img
                         class="profileInfoIcons"
-                        src="../assets/icons/heart-thin.svg"
+                        src="icons/heart-thin.svg"
                         alt="heart"
                 />
                 <p>Single</p>
@@ -57,7 +62,7 @@
               <div class="job group profileinfo">
                 <img
                         class="profileInfoIcons"
-                        src="../assets/icons/job-seeker.svg"
+                        src="icons/job-seeker.svg"
                         alt="job"
                 />
                 <p>Fischer</p>
@@ -66,7 +71,7 @@
             <div class="visitor profileinfo">
               <img
                       class="profileInfoIcons"
-                      src="../assets/icons/guest-traveler.svg"
+                      src="icons/guest-traveler.svg"
                       alt="icon"
               />
               <p>523</p>
@@ -88,7 +93,7 @@
     </div>
     <div class="icon-edit-content">
       <img
-              src="../assets/icons/pen.png"
+              src="icons/pen.png"
               alt="pen"
               onclick="displayprofileEdit()"
       />
@@ -137,7 +142,7 @@
       <div class="submit">
         <button class="submitBtn">
           <img
-                  src="../assets/icons/accept.png"
+                  src="icons/accept.svg"
                   alt="logo"
                   onclick="displayprofileInfo()"
           />
@@ -158,7 +163,7 @@
       culpa.
     </p>
     <div class="icon-edit-content">
-      <img src="../assets/icons/pen.png" alt="pen" />
+      <img src="icons/pen.png" alt="pen" />
     </div>
   </div>
 
@@ -193,7 +198,7 @@
       </div>
     </div>
     <div class="icon-edit-content">
-      <img src="../assets/icons/pen.png" alt="pen" />
+      <img src="icons/pen.png" alt="pen" />
     </div>
   </div>
 
@@ -216,11 +221,11 @@
       </div>
     </div>
     <div class="icon-edit-content">
-      <img src="../assets/icons/pen.png" alt="pen" />
+      <img src="icons/pen.png" alt="pen" />
     </div>
   </div>
 </div>
 
-<script type="text/javascript" src="../assets/js/profilePage.js"></script>
+<script type="text/javascript" src="js/profilePage.js"></script>
 </body>
 </html>
