--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments/head"></head>
+<head th:replace="fragments/head">
+</head>
+
 <head>
-    <link th:href = "@{/css/login.css}" rel="stylesheet">
-    <link th:href = "@{/css/signup.css}" rel="stylesheet">
-    <script type="text/javascript" th:src = "@{/js/signup.js}"></script>
     <title>Login.de.SignUp</title>
 </head>
 
