--- a/src/main/resources/static/css/friendlist.css
+++ b/src/main/resources/static/css/friendlist.css
@@ -20,23 +20,36 @@ ul li {
   transition: 0.5s;
 }
 
-ul li span:nth-child(1) {
+.contentFriendRequests ul li span:nth-child(1) {
   width: 100px;
 }
-ul li span:nth-child(2) {
+.contentFriendRequests ul li span:nth-child(2) {
   width: 140px;
 }
-ul li span:nth-child(3) {
+.contentFriendRequests ul li span:nth-child(3) {
   width: 100px;
 }
-ul li span:nth-child(4) {
+.contentFriendRequests ul li span:nth-child(4) {
   width: 140px;
 }
-ul li span:nth-child(5) {
+.contentFriendRequests ul li span:nth-child(5) {
   width: 100px;
 }
-ul li span:nth-child(6) {
+.contentFriendRequests ul li span:nth-child(6) {
   width: 100px;
+}
+
+.contentFriend ul li span:nth-child(1) {
+  width: 140px;
+}
+.contentFriend ul li span:nth-child(2) {
+  width: 200px;
+}
+.contentFriend ul li span:nth-child(3) {
+  width: 140px;
+}
+.contentFriend ul li span:nth-child(4) {
+  width: 200px;
 }
 
 li span {
