--- a/src/main/resources/templates/friendlist.html
+++ b/src/main/resources/templates/friendlist.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/css/friendlist.css" />
+
     <title>friendlist</title>
   </head>
   <body>
-    <div class="content">
+    <div class="contentFriendRequests">
       <div class="list">
         <ul>
           <li class="header">
             <h2>Freundschaftsanfragen (3)</h2>
           </li>
           <li>
-            <span class="name">name:</span>
-            <span class="age">alter:</span>
+            <span class="name">Name:</span>
+            <span class="age">Alter:</span>
             <span class="gender">Geschlecht:</span>
             <span class="relationship">Beziehungstatus:</span>
             <span class="region">Region:</span>
@@ -47,6 +48,69 @@
             <span class="region">erfurt</span>
             <span class="region">icon</span>
             <span class="region">icon</span>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="contentFriend">
+      <div class="list">
+        <ul>
+          <li class="header">
+            <h2>Meine Freunde (179)</h2>
+          </li>
+          <li>
+            <span class="name">Name:</span>
+            <span class="FriendsSince">Freunde seit:</span>
+            <span class="icon">Freund entfernen</span>
+          </li>
+          <li>
+            <span class="name">Ali Aal</span>
+            <span class="FriendsSince">23.05.2005</span>
+            <span class="icon">icon</span>
+            <span class="status">single</span>
+          </li>
+          <li>
+            <span class="name">Tilda Tentakel</span>
+            <span class="FriendsSince">25</span>
+            <span class="icon">icon</span>
+            <span class="status">single</span>
+          </li>
+          <li>
+            <span class="name">Tilda Tentakel</span>
+            <span class="FriendsSince">25</span>
+            <span class="icon">icon</span>
+            <span class="status">single</span>
+          </li>
+          <li>
+            <span class="name">Tilda Tentakel</span>
+            <span class="FriendsSince">25</span>
+            <span class="icon">icon</span>
+            <span class="status">single</span>
+          </li>
+          <li>
+            <span class="name">Tilda Tentakel</span>
+            <span class="FriendsSince">25</span>
+            <span class="icon">icon</span>
+            <span class="status">single</span>
+          </li>
+          <li>
+            <span class="name">Tilda Tentakel</span>
+            <span class="FriendsSince">25</span>
+            <span class="icon">icon</span>
+            <span class="status">single</span>
+          </li>
+          <li>
+            <span class="name">Tilda Tentakel</span>
+            <span class="FriendsSince">25</span>
+            <span class="icon">icon</span>
+            <span class="status">single</span>
+          </li>
+          <li>
+            <span class="name">Tilda Tentakel</span>
+            <span class="FriendsSince">25</span>
+            <span class="icon">icon</span>
+            <span class="status">single</span>
           </li>
         </ul>
       </div>
