--- a/src/main/resources/templates/friendlist.html
+++ b/src/main/resources/templates/friendlist.html
@@ -15,21 +15,33 @@
           <li class="header">
             <h2>Freundschaftsanfragen (3)</h2>
           </li>
-          <li>
+          <li class="infos">
             <span class="name">Name:</span>
             <span class="age">Alter:</span>
             <span class="gender">Geschlecht:</span>
             <span class="relationship">Beziehungstatus:</span>
             <span class="region">Region:</span>
           </li>
-          <li>
+          <li class="infos">
             <span class="name">Tilda Tentakel</span>
             <span class="age">25</span>
             <span class="gender">m</span>
             <span class="relationship">single</span>
             <span class="region">erfurt</span>
-            <span class="region">icon</span>
-            <span class="region">icon</span>
+            <span class="region">
+              <img
+                      class="acceptFriendIcon"
+                      src="icons/accept.svg"
+                      alt="icon"
+              />
+            </span>
+            <span class="region">
+              <img
+                      class="notAcceptFriendIcon"
+                      src="icons/notAccept.svg"
+                      alt="icon"
+              />
+            </span>
           </li>
           <li>
             <span class="name">Tilda Tentakel</span>
@@ -37,8 +49,20 @@
             <span class="gender">m</span>
             <span class="relationship">single</span>
             <span class="region">erfurt</span>
-            <span class="region">icon</span>
-            <span class="region">icon</span>
+            <span class="region">
+              <img
+                      class="acceptFriendIcon"
+                      src="icons/accept.svg"
+                      alt="icon"
+              />
+            </span>
+            <span class="region">
+              <img
+                      class="notAcceptFriendIcon"
+                      src="icons/notAccept.svg"
+                      alt="icon"
+              />
+            </span>
           </li>
           <li>
             <span class="name">Tilda Tentakel</span>
@@ -46,8 +70,20 @@
             <span class="gender">m</span>
             <span class="relationship">single</span>
             <span class="region">erfurt</span>
-            <span class="region">icon</span>
-            <span class="region">icon</span>
+            <span class="region">
+              <img
+                      class="acceptFriendIcon"
+                      src="icons/accept.svg"
+                      alt="icon"
+              />
+            </span>
+            <span class="region">
+              <img
+                      class="notAcceptFriendIcon"
+                      src="icons/notAccept.svg"
+                      alt="icon"
+              />
+            </span>
           </li>
         </ul>
       </div>
