--- a/src/main/resources/static/css/friendlist.css
+++ b/src/main/resources/static/css/friendlist.css
@@ -11,6 +11,7 @@ ul {
   box-sizing: border-box;
   box-shadow: 0 0 15px;
   border-radius: 30px;
+  background-color: #FFF3B1;
 }
 
 ul li {
@@ -18,6 +19,15 @@ ul li {
   padding: 10px 20px;
   margin: 5px 0;
   transition: 0.5s;
+  background-color: #FED700;
+}
+
+ul li header {
+ background-color: #FED700;
+}
+
+.contentFriendRequests {
+ background-color: #FFF3B1;
 }
 
 .contentFriendRequests ul li span:nth-child(1) {
