--- a/src/main/resources/templates/friendlist.html
+++ b/src/main/resources/templates/friendlist.html
@@ -9,146 +9,148 @@
     <title>friendlist</title>
   </head>
   <body>
-    <div class="contentFriendRequests">
-      <div class="list">
-        <ul>
-          <li class="header">
-            <h2>Freundschaftsanfragen (3)</h2>
-          </li>
-          <li class="infos">
-            <span class="name">Name:</span>
-            <span class="age">Alter:</span>
-            <span class="gender">Geschlecht:</span>
-            <span class="relationship">Beziehungstatus:</span>
-            <span class="region">Region:</span>
-          </li>
-          <li class="infos">
-            <span class="name">Tilda Tentakel</span>
-            <span class="age">25</span>
-            <span class="gender">m</span>
-            <span class="relationship">single</span>
-            <span class="region">erfurt</span>
-            <span class="region">
-              <img
-                      class="acceptFriendIcon"
-                      src="icons/accept.svg"
-                      alt="icon"
-              />
-            </span>
-            <span class="region">
-              <img
-                      class="notAcceptFriendIcon"
-                      src="icons/notAccept.svg"
-                      alt="icon"
-              />
-            </span>
-          </li>
-          <li>
-            <span class="name">Tilda Tentakel</span>
-            <span class="age">25</span>
-            <span class="gender">m</span>
-            <span class="relationship">single</span>
-            <span class="region">erfurt</span>
-            <span class="region">
-              <img
-                      class="acceptFriendIcon"
-                      src="icons/accept.svg"
-                      alt="icon"
-              />
-            </span>
-            <span class="region">
-              <img
-                      class="notAcceptFriendIcon"
-                      src="icons/notAccept.svg"
-                      alt="icon"
-              />
-            </span>
-          </li>
-          <li>
-            <span class="name">Tilda Tentakel</span>
-            <span class="age">25</span>
-            <span class="gender">m</span>
-            <span class="relationship">single</span>
-            <span class="region">erfurt</span>
-            <span class="region">
-              <img
-                      class="acceptFriendIcon"
-                      src="icons/accept.svg"
-                      alt="icon"
-              />
-            </span>
-            <span class="region">
-              <img
-                      class="notAcceptFriendIcon"
-                      src="icons/notAccept.svg"
-                      alt="icon"
-              />
-            </span>
-          </li>
-        </ul>
+    <div class="container">
+      <div class="contentFriendRequests">
+        <div class="list">
+          <ul>
+            <li class="header">
+              <h2>Freundschaftsanfragen (3)</h2>
+            </li>
+            <li class="infos">
+              <span class="name">Name:</span>
+              <span class="age">Alter:</span>
+              <span class="gender">Geschlecht:</span>
+              <span class="relationship">Beziehungstatus:</span>
+              <span class="region">Region:</span>
+            </li>
+            <li class="infos">
+              <span class="name">Tilda Tentakel</span>
+              <span class="age">25</span>
+              <span class="gender">m</span>
+              <span class="relationship">single</span>
+              <span class="region">erfurt</span>
+              <span class="region">
+                <img
+                  class="acceptFriendIcon"
+                  src="icons/accept.svg"
+                  alt="icon"
+                />
+              </span>
+              <span class="region">
+                <img
+                  class="notAcceptFriendIcon"
+                  src="icons/notAccept.svg"
+                  alt="icon"
+                />
+              </span>
+            </li>
+            <li>
+              <span class="name">Tilda Tentakel</span>
+              <span class="age">25</span>
+              <span class="gender">m</span>
+              <span class="relationship">single</span>
+              <span class="region">erfurt</span>
+              <span class="region">
+                <img
+                  class="acceptFriendIcon"
+                  src="icons/accept.svg"
+                  alt="icon"
+                />
+              </span>
+              <span class="region">
+                <img
+                  class="notAcceptFriendIcon"
+                  src="icons/notAccept.svg"
+                  alt="icon"
+                />
+              </span>
+            </li>
+            <li>
+              <span class="name">Tilda Tentakel</span>
+              <span class="age">25</span>
+              <span class="gender">m</span>
+              <span class="relationship">single</span>
+              <span class="region">erfurt</span>
+              <span class="region">
+                <img
+                  class="acceptFriendIcon"
+                  src="icons/accept.svg"
+                  alt="icon"
+                />
+              </span>
+              <span class="region">
+                <img
+                  class="notAcceptFriendIcon"
+                  src="icons/notAccept.svg"
+                  alt="icon"
+                />
+              </span>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
 
-    <div class="contentFriend">
-      <div class="list">
-        <ul>
-          <li class="header">
-            <h2>Meine Freunde (179)</h2>
-          </li>
-          <li>
-            <span class="name">Name:</span>
-            <span class="FriendsSince">Freunde seit:</span>
-            <span class="icon">Freund entfernen</span>
-          </li>
-          <li>
-            <span class="name">Ali Aal</span>
-            <span class="FriendsSince">23.05.2005</span>
-            <span class="icon">icon</span>
-            <span class="status">single</span>
-          </li>
-          <li>
-            <span class="name">Tilda Tentakel</span>
-            <span class="FriendsSince">25</span>
-            <span class="icon">icon</span>
-            <span class="status">single</span>
-          </li>
-          <li>
-            <span class="name">Tilda Tentakel</span>
-            <span class="FriendsSince">25</span>
-            <span class="icon">icon</span>
-            <span class="status">single</span>
-          </li>
-          <li>
-            <span class="name">Tilda Tentakel</span>
-            <span class="FriendsSince">25</span>
-            <span class="icon">icon</span>
-            <span class="status">single</span>
-          </li>
-          <li>
-            <span class="name">Tilda Tentakel</span>
-            <span class="FriendsSince">25</span>
-            <span class="icon">icon</span>
-            <span class="status">single</span>
-          </li>
-          <li>
-            <span class="name">Tilda Tentakel</span>
-            <span class="FriendsSince">25</span>
-            <span class="icon">icon</span>
-            <span class="status">single</span>
-          </li>
-          <li>
-            <span class="name">Tilda Tentakel</span>
-            <span class="FriendsSince">25</span>
-            <span class="icon">icon</span>
-            <span class="status">single</span>
-          </li>
-          <li>
-            <span class="name">Tilda Tentakel</span>
-            <span class="FriendsSince">25</span>
-            <span class="icon">icon</span>
-            <span class="status">single</span>
-          </li>
-        </ul>
+      <div class="contentFriend">
+        <div class="list">
+          <ul>
+            <li class="header">
+              <h2>Meine Freunde (179)</h2>
+            </li>
+            <li>
+              <span class="name">Name:</span>
+              <span class="FriendsSince">Freunde seit:</span>
+              <span class="icon">Freund entfernen</span>
+            </li>
+            <li>
+              <span class="name">Ali Aal</span>
+              <span class="FriendsSince">23.05.2005</span>
+              <span class="icon">icon</span>
+              <span class="status">single</span>
+            </li>
+            <li>
+              <span class="name">Tilda Tentakel</span>
+              <span class="FriendsSince">25</span>
+              <span class="icon">icon</span>
+              <span class="status">single</span>
+            </li>
+            <li>
+              <span class="name">Tilda Tentakel</span>
+              <span class="FriendsSince">25</span>
+              <span class="icon">icon</span>
+              <span class="status">single</span>
+            </li>
+            <li>
+              <span class="name">Tilda Tentakel</span>
+              <span class="FriendsSince">25</span>
+              <span class="icon">icon</span>
+              <span class="status">single</span>
+            </li>
+            <li>
+              <span class="name">Tilda Tentakel</span>
+              <span class="FriendsSince">25</span>
+              <span class="icon">icon</span>
+              <span class="status">single</span>
+            </li>
+            <li>
+              <span class="name">Tilda Tentakel</span>
+              <span class="FriendsSince">25</span>
+              <span class="icon">icon</span>
+              <span class="status">single</span>
+            </li>
+            <li>
+              <span class="name">Tilda Tentakel</span>
+              <span class="FriendsSince">25</span>
+              <span class="icon">icon</span>
+              <span class="status">single</span>
+            </li>
+            <li>
+              <span class="name">Tilda Tentakel</span>
+              <span class="FriendsSince">25</span>
+              <span class="icon">icon</span>
+              <span class="status">single</span>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
