--- a/src/main/resources/templates/friendlist.html
+++ b/src/main/resources/templates/friendlist.html
@@ -30,16 +30,16 @@
               <span class="relationship">single</span>
               <span class="region">erfurt</span>
               <span class="region">
-                <img
-                  class="acceptFriendIcon"
-                  src="icons/accept.svg"
-                  alt="icon"
+                  <img
+                        class="acceptFriendIcon"
+                        src="../static/icons/accept.svg"
+                        alt="icon"
                 />
               </span>
               <span class="region">
                 <img
                   class="notAcceptFriendIcon"
-                  src="icons/notAccept.svg"
+                  src="../static/icons/notAccept.svg"
                   alt="icon"
                 />
               </span>
