--- a/src/main/resources/templates/friendlist.html
+++ b/src/main/resources/templates/friendlist.html
@@ -29,17 +29,19 @@
               <span class="gender">m</span>
               <span class="relationship">single</span>
               <span class="region">erfurt</span>
-              <span class="region">
-                  <img
-                        class="acceptFriendIcon"
-                        src="../static/icons/accept.svg"
-                        alt="icon"
+
+              <span class="icon">
+                <img
+                  class="acceptFriendIcon"
+                  src="../static/icons/accept.svg"
+                  alt="icon"
                 />
               </span>
-              <span class="region">
+
+              <span class="icon">
                 <img
                   class="notAcceptFriendIcon"
-                  src="../static/icons/notAccept.svg"
+                  src="../static/icons/accept.svg"
                   alt="icon"
                 />
               </span>
@@ -50,17 +52,18 @@
               <span class="gender">m</span>
               <span class="relationship">single</span>
               <span class="region">erfurt</span>
-              <span class="region">
+              <span class="icon">
                 <img
                   class="acceptFriendIcon"
-                  src="icons/accept.svg"
+                  src="../static/icons/accept.svg"
                   alt="icon"
                 />
               </span>
-              <span class="region">
+
+              <span class="icon">
                 <img
                   class="notAcceptFriendIcon"
-                  src="icons/notAccept.svg"
+                  src="../static/icons/accept.svg"
                   alt="icon"
                 />
               </span>
@@ -71,17 +74,17 @@
               <span class="gender">m</span>
               <span class="relationship">single</span>
               <span class="region">erfurt</span>
-              <span class="region">
+              <span class="icon">
                 <img
                   class="acceptFriendIcon"
-                  src="icons/accept.svg"
+                  src="../static/icons/accept.svg"
                   alt="icon"
                 />
               </span>
-              <span class="region">
+              <span class="icon">
                 <img
                   class="notAcceptFriendIcon"
-                  src="icons/notAccept.svg"
+                  src="../static/icons/accept.svg"
                   alt="icon"
                 />
               </span>
