--- a/src/main/resources/templates/friendlist.html
+++ b/src/main/resources/templates/friendlist.html
@@ -107,49 +107,84 @@
             <li>
               <span class="name">Ali Aal</span>
               <span class="FriendsSince">23.05.2005</span>
-              <span class="icon">icon</span>
+              <span class="icon">
+                 <img
+                         class="unfriendIcon"
+                         src="../static/icons/unfriend.svg"
+                         alt="icon"
+                 />
+              </span>
               <span class="status">single</span>
             </li>
             <li>
               <span class="name">Tilda Tentakel</span>
               <span class="FriendsSince">25</span>
-              <span class="icon">icon</span>
+              <span class="icon">
+<img
+        class="unfriendIcon"
+        src="../static/icons/unfriend.svg"
+        alt="icon"
+/>              </span>
               <span class="status">single</span>
             </li>
             <li>
               <span class="name">Tilda Tentakel</span>
               <span class="FriendsSince">25</span>
-              <span class="icon">icon</span>
+              <span class="icon"><img
+                      class="unfriendIcon"
+                      src="../static/icons/unfriend.svg"
+                      alt="icon"
+              /></span>
               <span class="status">single</span>
             </li>
             <li>
               <span class="name">Tilda Tentakel</span>
               <span class="FriendsSince">25</span>
-              <span class="icon">icon</span>
+              <span class="icon"><img
+                      class="unfriendIcon"
+                      src="../static/icons/unfriend.svg"
+                      alt="icon"
+              /></span>
               <span class="status">single</span>
             </li>
             <li>
               <span class="name">Tilda Tentakel</span>
               <span class="FriendsSince">25</span>
-              <span class="icon">icon</span>
+              <span class="icon"><img
+                      class="unfriendIcon"
+                      src="../static/icons/unfriend.svg"
+                      alt="icon"
+              /></span>
               <span class="status">single</span>
             </li>
             <li>
               <span class="name">Tilda Tentakel</span>
               <span class="FriendsSince">25</span>
-              <span class="icon">icon</span>
+              <span class="icon"><img
+                      class="unfriendIcon"
+                      src="../static/icons/unfriend.svg"
+                      alt="icon"
+              /></span>
               <span class="status">single</span>
             </li>
             <li>
               <span class="name">Tilda Tentakel</span>
               <span class="FriendsSince">25</span>
-              <span class="icon">icon</span>
+              <span class="icon"><img
+                      class="unfriendIcon"
+                      src="../static/icons/unfriend.svg"
+                      alt="icon"
+              /></span>
               <span class="status">single</span>
             </li>
             <li>
               <span class="name">Tilda Tentakel</span>
               <span class="FriendsSince">25</span>
-              <span class="icon">icon</span>
+              <span class="icon"><img
+                      class="unfriendIcon"
+                      src="../static/icons/unfriend.svg"
+                      alt="icon"
+              /></span>
               <span class="status">single</span>
             </li>
           </ul>
